# space_station_defense

./: .gitignore  Cargo.toml  rust-toolchain.toml
src/: main.rs
src/builders/: enemy_builder.rs  mod.rs  spawner_builder.rs
src/builders/bundles/: dynamic_object.rs  enemy_bundle.rs  mod.rs  spawner_bundle.rs  static_object.rs
src/camera_plugin/: cameras_plugin.rs  mod.rs
src/camera_plugin/components/tags/: camera_tag.rs  mod.rs
src/camera_plugin/systems/: spawn_camera.rs
src/components/: health.rs  mod.rs  mover.rs  spawner.rs
src/components/tags/: camera_tag.rs  enemy_tag.rs  mod.rs  object_tag.rs  space_station_tag.rs  spawner_tag.rs
src/components/weapons/: machine_gun.rs  mod.rs
src/functions/: mod.rs  spawn_space_station.rs
src/objects_plugin/: mod.rs  objects_plugin.rs
src/objects_plugin/loaders/: mod.rs  ship_loader.rs  space_station_loader.rs
src/objects_plugin/loaders/builders/: mod.rs  ship_builder.rs  space_station_builder.rs
src/objects_plugin/loaders/records/: mod.rs  ship.rs  space_station.rs
src/resources/: difficulty_timer.rs  enemy_images.rs  mod.rs  resources_plugin.rs  space_station_image.rs
src/settings/: app_settings.rs  camera_settings.rs  mod.rs  window_settings.rs
src/systems/: mod.rs  systems_plugin.rs
src/systems/camera/: mod.rs  spawn_camera.rs
src/systems/game/: handle_collisions.rs  mod.rs  move_movers.rs  spawn_enemies.rs  start_game.rs  up_difficulty.rs
src/types/: app_state.rs  enemy_type.rs  game_state.rs  mod.rs  polar.rs  screen_layer.rs  ship_type.rs
src/windows/: mod.rs  windows_plugin.rs
src/windows_plugin/: mod.rs  windows_plugin.rs
src/windows_plugin/systems/: mod.rs  set_window_icon.rs
